Custom CSS Added. Designed LOGIN, REGiSTRATION and LANDING Page

--- a/Views/login.ejs
+++ b/Views/login.ejs
@@ -3,13 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Style/style.css">
+    <link rel="stylesheet" href="/Style/Style.css">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Welcome</title>
+    <title>Register</title>
 </head>
 <body>
-    <h2>
-        Please Login First
-    </h2>
+    <div class="landing">
+        <div class="img">
+            <img src="/Image/login.png" alt="">
+            <h2>Login</h2>
+        </div>
+        <div class="logForm">
+            <p>Email</p>
+            <input type="text" placeholder="Enter Email...">
+            <p>Password</p>
+            <input type="text" placeholder="Enter Password...">
+            <h4> <a href="#">Login</a> </h4>
+            <p><a href="/login">Forgot Password?</a></p>
+        </div>
+    </div>
+
+    <footer>
+        <p>&copy; Developed By Rakib Uddin </p>
+    </footer>
 </body>
 </html>
