--- a/Views/register.ejs
+++ b/Views/register.ejs
@@ -3,10 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/Style/Style.css">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Register</title>
 </head>
 <body>
-    <h1>Please Register</h1>
+    <div class="landing">
+        <div class="img">
+            <img src="/Image/reg.png" alt="">
+            <h2>Register</h2>
+        </div>
+        <div class="regForm">
+            <p>Name</p>
+            <input type="text" placeholder="Enter Name...">
+            <p>Email</p>
+            <input type="text" placeholder="Enter Email...">
+            <p>Password</p>
+            <input type="text" placeholder="Enter Password...">
+            <p>Confirm Password</p>
+            <input type="text" placeholder="Confirm Password...">
+            <h4> <a href="#">Register</a> </h4>
+            <p>Have an account? <a href="/login">Login</a></p>
+        </div>
+    </div>
+
+    <footer>
+        <p>&copy; Developed By Rakib Uddin </p>
+    </footer>
 </body>
 </html>
