--- a/Views/login.ejs
+++ b/Views/login.ejs
@@ -19,7 +19,8 @@
             <p>Password</p>
             <input type="text" placeholder="Enter Password...">
             <h4> <a href="#">Login</a> </h4>
-            <p><a href="/login">Forgot Password?</a></p>
+            <p>Don't have any account? <a href="/register">Register</a></p>
+            <span><a href="/login">Forgot Password?</a></span>
         </div>
     </div>
 
