--- a/Public/Style/Style.css
+++ b/Public/Style/Style.css
@@ -22,6 +22,12 @@ h1 , h2{
     color: #4f0305;
     font-size: 17px;
 }
+.landing .errors{
+    background: lightyellow;
+    padding: 5px;
+    width: 96%;
+    margin-top: 10px;
+}
 .landing p {
     margin: 5px 0;
     padding: 5px 0; 
