--- a/Views/login.ejs
+++ b/Views/login.ejs
@@ -16,9 +16,9 @@
         <div class="logForm">
             <form action="/login" method="POST">
             <p>Email</p>
-            <input type="email" placeholder="Enter Email...">
+            <input type="email" placeholder="Enter Email..." name="email">
             <p>Password</p>
-            <input type="password" placeholder="Enter Password...">
+            <input type="password" placeholder="Enter Password..." name="password">
             <button type="submit">Login</button>
             </form>
             <p>Don't have any account? <a href="/register">Register</a></p>
