--- a/Views/dashbord.ejs
+++ b/Views/dashbord.ejs
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="/Style/Style.css">
     <title>Dashbord</title>
 </head>
 <body>
+    <div class="landing">
+        <h2>Dashbord</h2>
+        <h3>Welcome <%= name %></h3>
+    </div>
     
+    <footer>
+        <p>&copy; Developed By Rakib Uddin </p>
+    </footer>
 </body>
 </html>
